src/solver/tests/logical_solver/puzzles/snapshots/lisudoku_solver__solver__tests__logical_solver__puzzles__classic_9x9__check_classic_9x9_1_solve.snap
---
source: src/solver/tests/logical_solver/puzzles/classic_9x9.rs
expression: result.steps
snapshot_kind: text
---
- rule: NakedSingle
  cells:
    - row: 1
      col: 1
  values:
    - 4
  areas:
    - Row: 1
    - Column: 1
    - Region: 0
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 1
  values:
    - 9
  areas:
    - Row: 0
    - Column: 1
    - Region: 0
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 1
  values:
    - 6
  areas:
    - Column: 1
    - Region: 0
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 2
  values:
    - 5
  areas:
    - Row: 2
    - Column: 2
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 8
  values:
    - 7
  areas:
    - Row: 2
    - Column: 8
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 8
  values:
    - 1
  areas:
    - Row: 3
    - Column: 8
    - Region: 5
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 6
  values:
    - 3
  areas:
    - Column: 6
    - Region: 5
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 8
  values:
    - 6
  areas:
    - Column: 8
    - Region: 5
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 7
  values:
    - 7
  areas:
    - Region: 5
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 0
  values:
    - 1
  areas:
    - Row: 4
    - Column: 0
    - Region: 3
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 6
  values:
    - 1
  areas:
    - Column: 6
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 8
  values:
    - 8
  areas:
    - Row: 7
    - Column: 8
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 8
  values:
    - 5
  areas:
    - Row: 1
    - Column: 8
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 3
  values:
    - 3
  areas:
    - Row: 3
    - Column: 3
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 2
  values:
    - 8
  areas:
    - Row: 4
    - Region: 3
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 0
  values:
    - 3
  areas:
    - Column: 0
    - Region: 3
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 1
  values:
    - 3
  areas:
    - Row: 7
    - Column: 1
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 8
  values:
    - 4
  areas:
    - Column: 8
    - Region: 8
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 3
  values:
    - 9
  areas:
    - Row: 2
    - Column: 3
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 4
  values:
    - 4
  areas:
    - Row: 3
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 3
  values:
    - 7
  areas:
    - Row: 4
    - Column: 3
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 2
  values:
    - 4
  areas:
    - Region: 3
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 1
  values:
    - 8
  areas:
    - Column: 1
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 2
  values:
    - 6
  areas:
    - Row: 6
    - Column: 2
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 5
  values:
    - 3
  areas:
    - Row: 2
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 5
  values:
    - 6
  areas:
    - Row: 4
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 2
  values:
    - 2
  areas:
    - Row: 8
    - Column: 2
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 2
  values:
    - 1
  areas:
    - Column: 2
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 7
  values:
    - 8
  areas:
    - Row: 0
    - Column: 7
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 3
  values:
    - 2
  areas:
    - Row: 0
    - Column: 3
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 7
  values:
    - 1
  areas:
    - Region: 2
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 0
  values:
    - 7
  areas:
    - Row: 0
    - Column: 0
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 3
  values:
    - 1
  areas:
    - Row: 7
    - Column: 3
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 5
  values:
    - 4
  areas:
    - Row: 0
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 0
  values:
    - 2
  areas:
    - Region: 0
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 3
  values:
    - 8
  areas:
    - Row: 5
    - Column: 3
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 4
  values:
    - 9
  areas:
    - Row: 5
    - Column: 4
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 3
  values:
    - 5
  areas:
    - Column: 3
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 5
  values:
    - 1
  areas:
    - Row: 5
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 4
  values:
    - 6
  areas:
    - Row: 7
    - Column: 4
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 0
  values:
    - 9
  areas:
    - Row: 8
    - Column: 0
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 0
  values:
    - 5
  areas:
    - Column: 0
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 7
  values:
    - 9
  areas:
    - Row: 7
    - Column: 7
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 5
  values:
    - 8
  areas:
    - Row: 8
    - Column: 5
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 5
  values:
    - 7
  areas:
    - Row: 1
    - Column: 5
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 7
  values:
    - 3
  areas:
    - Row: 6
    - Column: 7
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 5
  values:
    - 2
  areas:
    - Row: 7
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 4
  values:
    - 3
  areas:
    - Row: 8
    - Column: 4
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 4
  values:
    - 8
  areas:
    - Row: 1
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 4
  values:
    - 7
  areas:
    - Row: 6
    - Column: 4
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 5
  values:
    - 9
  areas:
    - Column: 5
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 7
  values:
    - 6
  areas:
    - Row: 8
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
