src/solver/tests/logical_solver/puzzles/snapshots/lisudoku_solver__solver__tests__logical_solver__puzzles__classic_9x9__check_classic_9x9_hard_empty_rectangles_solve.snap
---
source: src/solver/tests/logical_solver/puzzles/classic_9x9.rs
expression: result.steps
snapshot_kind: text
---
- rule: HiddenSingle
  cells:
    - row: 1
      col: 1
    - row: 2
      col: 3
    - row: 0
      col: 6
  values:
    - 6
  areas:
    - Row: 1
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 2
      col: 7
    - row: 6
      col: 1
    - row: 1
      col: 2
    - row: 0
      col: 3
  values:
    - 9
  areas:
    - Row: 2
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 6
      col: 7
    - row: 7
      col: 2
    - row: 8
      col: 3
    - row: 2
      col: 6
  values:
    - 5
  areas:
    - Row: 6
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 2
      col: 4
    - row: 8
      col: 1
    - row: 4
      col: 5
  values:
    - 3
  areas:
    - Row: 2
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 6
      col: 3
    - row: 8
      col: 1
    - row: 2
      col: 4
    - row: 3
      col: 6
  values:
    - 3
  areas:
    - Row: 6
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: Candidates
  cells: []
  values: []
  areas: []
  affected_cells: []
  candidates:
    - - - 3
        - 5
        - 8
      - - 1
        - 5
        - 8
      - - 1
        - 3
      - []
      - - 1
        - 2
        - 4
        - 5
        - 7
        - 8
      - - 1
        - 4
        - 5
        - 8
      - []
      - - 1
        - 2
        - 3
        - 7
      - - 2
        - 3
        - 7
    - - []
      - []
      - []
      - - 1
        - 2
      - - 1
        - 2
        - 5
        - 7
      - - 1
        - 5
      - []
      - - 1
        - 2
        - 3
        - 7
      - - 2
        - 3
        - 7
    - - []
      - - 1
        - 8
      - []
      - []
      - []
      - - 1
        - 8
      - []
      - []
      - []
    - - []
      - - 2
        - 4
        - 5
      - []
      - []
      - - 2
        - 4
        - 5
        - 6
        - 9
      - - 4
        - 5
        - 9
      - []
      - - 2
        - 6
      - - 2
        - 5
        - 6
        - 9
    - - - 5
        - 6
        - 7
        - 9
      - - 2
        - 4
        - 5
        - 7
      - - 2
        - 4
        - 6
      - - 1
        - 2
        - 4
        - 8
      - - 1
        - 2
        - 4
        - 5
        - 6
        - 8
        - 9
      - []
      - - 1
        - 2
        - 7
        - 9
      - - 1
        - 2
        - 6
        - 7
        - 8
      - - 2
        - 5
        - 6
        - 7
        - 8
        - 9
    - - - 3
        - 5
        - 6
        - 7
        - 9
      - - 2
        - 5
        - 7
      - - 2
        - 3
        - 6
      - - 1
        - 2
        - 8
      - - 1
        - 2
        - 5
        - 6
        - 8
        - 9
      - - 1
        - 5
        - 8
        - 9
      - - 1
        - 2
        - 7
        - 9
      - []
      - - 2
        - 5
        - 6
        - 7
        - 8
        - 9
    - - - 6
        - 8
      - []
      - - 2
        - 4
        - 6
      - []
      - - 4
        - 8
      - []
      - - 2
        - 4
      - []
      - []
    - - - 6
        - 7
        - 8
      - - 1
        - 4
        - 7
        - 8
      - []
      - - 1
        - 4
        - 8
      - - 1
        - 4
        - 8
        - 9
      - []
      - - 4
        - 7
        - 9
      - - 3
        - 6
        - 7
        - 8
      - - 3
        - 6
        - 7
        - 8
        - 9
    - - - 7
        - 8
      - []
      - - 1
        - 2
        - 4
      - []
      - - 1
        - 4
        - 8
        - 9
      - []
      - - 2
        - 4
        - 7
        - 9
      - - 2
        - 7
        - 8
      - - 2
        - 7
        - 8
        - 9
  invalid_state_reason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 1
      col: 7
    - row: 1
      col: 8
  values:
    - 3
  areas:
    - Row: 1
    - Region: 2
  affected_cells:
    - row: 0
      col: 7
    - row: 0
      col: 8
  candidates: ~
  invalid_state_reason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 1
      col: 4
    - row: 1
      col: 5
  values:
    - 5
  areas:
    - Row: 1
    - Region: 1
  affected_cells:
    - row: 0
      col: 4
    - row: 0
      col: 5
  candidates: ~
  invalid_state_reason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 6
      col: 0
    - row: 6
      col: 2
  values:
    - 6
  areas:
    - Row: 6
    - Region: 6
  affected_cells:
    - row: 7
      col: 0
  candidates: ~
  invalid_state_reason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 3
      col: 5
    - row: 5
      col: 5
  values:
    - 9
  areas:
    - Column: 5
    - Region: 4
  affected_cells:
    - row: 3
      col: 4
    - row: 4
      col: 4
    - row: 5
      col: 4
  candidates: ~
  invalid_state_reason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 4
      col: 6
    - row: 5
      col: 6
  values:
    - 1
  areas:
    - Column: 6
    - Region: 5
  affected_cells:
    - row: 4
      col: 7
  candidates: ~
  invalid_state_reason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 6
      col: 2
    - row: 8
      col: 2
  values:
    - 2
  areas:
    - Region: 6
    - Column: 2
  affected_cells:
    - row: 4
      col: 2
    - row: 5
      col: 2
  candidates: ~
  invalid_state_reason: ~
- rule: NakedPairs
  cells:
    - row: 7
      col: 0
    - row: 8
      col: 0
  values:
    - 7
    - 8
  areas:
    - Column: 0
  affected_cells:
    - row: 0
      col: 0
    - row: 4
      col: 0
    - row: 5
      col: 0
    - row: 6
      col: 0
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 0
  values:
    - 6
  areas: []
  affected_cells:
    - row: 6
      col: 2
    - row: 4
      col: 0
    - row: 5
      col: 0
  candidates: ~
  invalid_state_reason: ~
- rule: HiddenSingle
  cells:
    - row: 6
      col: 4
  values:
    - 8
  areas:
    - Row: 6
  affected_cells:
    - row: 0
      col: 4
    - row: 4
      col: 4
    - row: 5
      col: 4
    - row: 7
      col: 4
    - row: 8
      col: 4
    - row: 7
      col: 3
  candidates: ~
  invalid_state_reason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 7
      col: 0
    - row: 8
      col: 0
  values:
    - 7
  areas:
    - Column: 0
    - Region: 6
  affected_cells:
    - row: 7
      col: 1
  candidates: ~
  invalid_state_reason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 7
      col: 0
    - row: 8
      col: 0
  values:
    - 8
  areas:
    - Column: 0
    - Region: 6
  affected_cells:
    - row: 7
      col: 1
  candidates: ~
  invalid_state_reason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 4
      col: 3
    - row: 5
      col: 3
  values:
    - 8
  areas:
    - Column: 3
    - Region: 4
  affected_cells:
    - row: 5
      col: 5
  candidates: ~
  invalid_state_reason: ~
- rule: NakedPairs
  cells:
    - row: 7
      col: 1
    - row: 7
      col: 3
  values:
    - 1
    - 4
  areas:
    - Row: 7
  affected_cells:
    - row: 7
      col: 4
    - row: 7
      col: 6
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 4
  values:
    - 9
  areas: []
  affected_cells:
    - row: 7
      col: 6
    - row: 7
      col: 8
    - row: 8
      col: 4
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 6
  values:
    - 7
  areas: []
  affected_cells:
    - row: 7
      col: 0
    - row: 7
      col: 7
    - row: 7
      col: 8
    - row: 4
      col: 6
    - row: 5
      col: 6
    - row: 8
      col: 6
    - row: 8
      col: 7
    - row: 8
      col: 8
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 0
  values:
    - 8
  areas: []
  affected_cells:
    - row: 7
      col: 7
    - row: 7
      col: 8
    - row: 8
      col: 0
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 0
  values:
    - 7
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: TurbotFish
  cells:
    - row: 2
      col: 1
    - row: 2
      col: 5
    - row: 7
      col: 1
    - row: 7
      col: 3
  values:
    - 1
  areas:
    - Row: 2
    - Row: 7
  affected_cells:
    - row: 1
      col: 3
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 3
  values:
    - 2
  areas: []
  affected_cells:
    - row: 1
      col: 4
    - row: 1
      col: 7
    - row: 1
      col: 8
    - row: 4
      col: 3
    - row: 5
      col: 3
    - row: 0
      col: 4
  candidates: ~
  invalid_state_reason: ~
- rule: EmptyRectangles
  cells:
    - row: 4
      col: 3
    - row: 7
      col: 3
  values:
    - 4
  areas:
    - Region: 3
    - Row: 4
    - Column: 1
  affected_cells:
    - row: 7
      col: 1
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 1
  values:
    - 1
  areas: []
  affected_cells:
    - row: 7
      col: 3
    - row: 0
      col: 1
    - row: 2
      col: 1
    - row: 8
      col: 2
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 1
  values:
    - 8
  areas: []
  affected_cells:
    - row: 2
      col: 5
    - row: 0
      col: 1
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 3
  values:
    - 4
  areas: []
  affected_cells:
    - row: 4
      col: 3
    - row: 8
      col: 4
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 1
  values:
    - 5
  areas: []
  affected_cells:
    - row: 0
      col: 0
    - row: 3
      col: 1
    - row: 4
      col: 1
    - row: 5
      col: 1
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 5
  values:
    - 1
  areas: []
  affected_cells:
    - row: 0
      col: 5
    - row: 1
      col: 5
    - row: 5
      col: 5
    - row: 0
      col: 4
    - row: 1
      col: 4
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 4
  values:
    - 1
  areas: []
  affected_cells:
    - row: 0
      col: 4
    - row: 1
      col: 4
    - row: 4
      col: 4
    - row: 5
      col: 4
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 0
  values:
    - 3
  areas: []
  affected_cells:
    - row: 0
      col: 2
    - row: 5
      col: 0
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 5
  values:
    - 5
  areas: []
  affected_cells:
    - row: 1
      col: 4
    - row: 3
      col: 5
    - row: 5
      col: 5
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 2
  values:
    - 1
  areas: []
  affected_cells:
    - row: 0
      col: 7
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 4
  values:
    - 7
  areas: []
  affected_cells:
    - row: 1
      col: 7
    - row: 1
      col: 8
    - row: 0
      col: 4
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 5
  values:
    - 9
  areas: []
  affected_cells:
    - row: 5
      col: 0
    - row: 5
      col: 6
    - row: 5
      col: 8
    - row: 3
      col: 5
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 4
  values:
    - 4
  areas: []
  affected_cells:
    - row: 0
      col: 5
    - row: 3
      col: 4
    - row: 4
      col: 4
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 8
  values:
    - 3
  areas: []
  affected_cells:
    - row: 1
      col: 7
    - row: 7
      col: 8
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 5
  values:
    - 4
  areas: []
  affected_cells:
    - row: 3
      col: 1
    - row: 3
      col: 4
    - row: 0
      col: 5
    - row: 4
      col: 4
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 0
  values:
    - 5
  areas: []
  affected_cells:
    - row: 5
      col: 4
    - row: 5
      col: 8
    - row: 4
      col: 0
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 5
  values:
    - 8
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 7
  values:
    - 1
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 1
  values:
    - 2
  areas: []
  affected_cells:
    - row: 3
      col: 4
    - row: 3
      col: 7
    - row: 3
      col: 8
    - row: 4
      col: 1
    - row: 5
      col: 1
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 0
  values:
    - 9
  areas: []
  affected_cells:
    - row: 4
      col: 6
    - row: 4
      col: 8
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 8
  values:
    - 6
  areas: []
  affected_cells:
    - row: 7
      col: 7
    - row: 3
      col: 8
    - row: 4
      col: 8
    - row: 5
      col: 8
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 7
  values:
    - 6
  areas: []
  affected_cells:
    - row: 3
      col: 4
    - row: 4
      col: 7
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 1
  values:
    - 7
  areas: []
  affected_cells:
    - row: 5
      col: 8
    - row: 4
      col: 1
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 7
  values:
    - 3
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 4
  values:
    - 5
  areas: []
  affected_cells:
    - row: 3
      col: 8
    - row: 4
      col: 4
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 1
  values:
    - 4
  areas: []
  affected_cells:
    - row: 4
      col: 2
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 8
  values:
    - 9
  areas: []
  affected_cells:
    - row: 8
      col: 8
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 2
  values:
    - 6
  areas: []
  affected_cells:
    - row: 4
      col: 4
    - row: 5
      col: 2
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 4
  values:
    - 2
  areas: []
  affected_cells:
    - row: 4
      col: 6
    - row: 4
      col: 7
    - row: 4
      col: 8
    - row: 5
      col: 4
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 2
  values:
    - 3
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 6
  values:
    - 1
  areas: []
  affected_cells:
    - row: 4
      col: 3
    - row: 5
      col: 6
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 4
  values:
    - 6
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 3
  values:
    - 8
  areas: []
  affected_cells:
    - row: 4
      col: 7
    - row: 4
      col: 8
    - row: 5
      col: 3
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 6
  values:
    - 2
  areas: []
  affected_cells:
    - row: 5
      col: 8
    - row: 6
      col: 6
    - row: 8
      col: 6
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 7
  values:
    - 7
  areas: []
  affected_cells:
    - row: 4
      col: 8
    - row: 0
      col: 7
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 3
  values:
    - 1
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 8
  values:
    - 8
  areas: []
  affected_cells:
    - row: 8
      col: 8
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 6
  values:
    - 4
  areas: []
  affected_cells:
    - row: 6
      col: 2
    - row: 8
      col: 6
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 7
  values:
    - 2
  areas: []
  affected_cells:
    - row: 0
      col: 8
    - row: 8
      col: 7
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 8
  values:
    - 5
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 2
  values:
    - 2
  areas: []
  affected_cells:
    - row: 8
      col: 2
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 6
  values:
    - 9
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 8
  values:
    - 2
  areas: []
  affected_cells:
    - row: 8
      col: 2
    - row: 8
      col: 7
    - row: 0
      col: 8
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 8
  values:
    - 7
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 2
  values:
    - 4
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 7
  values:
    - 8
  areas: []
  affected_cells: []
  candidates: ~
  invalid_state_reason: ~
